--- a/app/assets/locales/vi.json
+++ b/app/assets/locales/vi.json
@@ -1,1 +1,7 @@
-{}
+{
+  "Home": "Trang chủ",
+  "MyBookmark": "Dấu trang",
+  "Booking": "Đặt trước",
+  "Profile": "Tôi",
+  "MyParking": "Đặt trước"
+}
