--- a/app/assets/locales/en.json
+++ b/app/assets/locales/en.json
@@ -1,1 +1,7 @@
-{}
+{
+  "Home": "Home",
+  "MyBookmark": "My Bookmark",
+  "Booking": "Booking",
+  "Profile": "Profile",
+  "MyParking": "My Parking"
+}
