add second font + loginScreen

--- a/app/assets/locales/en.json
+++ b/app/assets/locales/en.json
@@ -3,5 +3,7 @@
   "MyBookmark": "My Bookmark",
   "Booking": "Booking",
   "Profile": "Profile",
-  "MyParking": "My Parking"
+  "MyParking": "My Parking",
+  "LoginTitle": "Login to your Account",
+  "SignIn": "Sign in"
 }
