--- a/app/assets/locales/vi.json
+++ b/app/assets/locales/vi.json
@@ -3,5 +3,7 @@
   "MyBookmark": "Dấu trang",
   "Booking": "Đặt trước",
   "Profile": "Tôi",
-  "MyParking": "Đặt trước"
+  "MyParking": "Đặt trước",
+  "LoginTitle": "Đăng nhập vào Tài khoản của bạn",
+  "SignIn": "Đăng nhập"
 }
